<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.home.info.userinfo.UserInfoFragment">


    <TextView
        android:id="@+id/textViewAddExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_expense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="28sp"
        android:fontFamily="@font/quicksand"
        app:layout_constraintBottom_toTopOf="@id/textInputLayoutAddExpenseComment"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAddExpenseComment"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="56dp"
        android:tooltipText="Açıklama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAddExpense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextAddExpenseComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand"
            android:hint="Açıklama" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAddExpenseAmount"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="56dp"
        android:tooltipText="Miktar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutAddExpenseComment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextAddExpenseAmount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/quicksand"
            android:drawableStart="@drawable/ic_money"
            android:hint="Miktar"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewSetExpenseType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/expense_type"
        android:layout_marginTop="5dp"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutAddExpenseAmount" />

    <LinearLayout
        android:id="@+id/linearLayoutAddExpenseVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSetExpenseType">


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonAddExpenseBill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="76dp"
                android:buttonTint="@color/app_background"
                android:fontFamily="@font/quicksand"
                android:text="@string/rent" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonAddExpenseRent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:buttonTint="@color/app_background"
                android:fontFamily="@font/quicksand"
                android:text="@string/bill" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonAddExpenseOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:buttonTint="@color/app_background"
                android:fontFamily="@font/quicksand"
                android:text="@string/other" />

        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewSetCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/currency_type"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutAddExpenseVertical" />


    <LinearLayout
        android:id="@+id/linearLayoutAddExpenseHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSetCurrency">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonAddExpenseTL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:buttonTint="@color/app_background"
                android:fontFamily="@font/quicksand"
                android:text="@string/tl" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonAddExpenseDollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:buttonTint="@color/app_background"
                android:fontFamily="@font/quicksand"
                android:text="@string/dollar" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonAddExpenseEuro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:buttonTint="@color/app_background"
                android:fontFamily="@font/quicksand"
                android:text="@string/euro" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonAddExpenseSterlin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:buttonTint="@color/app_background"
                android:fontFamily="@font/quicksand"
                android:text="@string/sterlin" />

        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/buttonAddExpenseSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand"
        android:text="Ekle"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAddExpenseHorizontal" />


</androidx.constraintlayout.widget.ConstraintLayout>