<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewUserInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_info_bg"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:text="Merhaba,"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewHello" />

            <TextView
                android:id="@+id/textViewGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/quicksand"
                android:visibility="invisible"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/textViewUserName" />

            <TextView
                android:id="@+id/textViewYourExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:text="Harcamanız"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewHello"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textViewHello" />

            <TextView
                android:id="@+id/textViewCurrentExpense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewUserName"
                app:layout_constraintStart_toStartOf="@id/textViewYourExpense"
                app:layout_constraintTop_toTopOf="@+id/textViewUserName" />

            <TextView
                android:id="@+id/textViewCurrency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/tlSymbol"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewUserName"
                app:layout_constraintStart_toEndOf="@id/textViewCurrentExpense"
                app:layout_constraintTop_toTopOf="@+id/textViewUserName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayoutChips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/cardViewUserInfo">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipTL"
            android:layout_width="85dp"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:backgroundTint="@color/white"
            android:checked="true"
            android:checkable="true"
            android:fontFamily="@font/quicksand"
            android:text="@string/tl"
            android:textAlignment="center"
            app:chipStrokeColor="@color/teal_200"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipDollar"
            android:layout_width="85dp"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            app:chipStrokeWidth="1dp"
            android:checkable="true"
            app:chipStrokeColor="@color/teal_200"
            android:backgroundTint="@color/white"
            android:background="@color/white"
            android:fontFamily="@font/quicksand"
            android:text="@string/dollar"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEuro"
            android:layout_width="85dp"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            app:chipStrokeWidth="1dp"
            android:checkable="true"
            app:chipStrokeColor="@color/teal_200"
            android:backgroundTint="@color/white"
            android:background="@color/white"
            android:fontFamily="@font/quicksand"
            android:text="@string/euro"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSterlin"
            android:layout_width="85dp"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:chipStrokeWidth="1dp"
            android:checkable="true"
            app:chipStrokeColor="@color/teal_200"
            android:backgroundTint="@color/white"
            android:background="@color/white"
            android:fontFamily="@font/quicksand"
            android:text="@string/sterlin"
            android:textAlignment="center" />
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutChips"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp"
        tools:itemCount="10"
        tools:listitem="@layout/home_expense_item" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabuttonHomeAddExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#FF7E56"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/ekle"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:icon="@drawable/ic_add"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>